--- a/DocGpt.CodeFixes/DocGpt.CodeFixes.csproj
+++ b/DocGpt.CodeFixes/DocGpt.CodeFixes.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DocGpt.Options\DocGpt.Options.csproj" />
     <ProjectReference Include="..\DocGpt\DocGpt.csproj" />
   </ItemGroup>
 
