--- a/DocGpt.Options/DocGpt.Options.csproj
+++ b/DocGpt.Options/DocGpt.Options.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.12" />
+  </ItemGroup>
+
 </Project>
