--- a/DocGpt.CodeFixes/DocGpt.CodeFixes.csproj
+++ b/DocGpt.CodeFixes/DocGpt.CodeFixes.csproj
@@ -7,17 +7,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AnalyzerReleases.Shipped.md" />
+    <None Remove="AnalyzerReleases.Unshipped.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="AnalyzerReleases.Shipped.md" />
+    <AdditionalFiles Include="AnalyzerReleases.Unshipped.md" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DocGpt.Options\DocGpt.Options.csproj" />
-    <ProjectReference Include="..\DocGpt\DocGpt.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="CodeFixResources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="CodeFixResources.resx" />
+    <Compile Update="AnalyzerResources.Designer.cs">
+      <DependentUpon>AnalyzerResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
     <EmbeddedResource Update="CodeFixResources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="CodeFixResources.Designer.cs" />
+    <EmbeddedResource Update="AnalyzerResources.resx">
+      <LastGenOutput>AnalyzerResources.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
