--- a/DocGpt.Vsix/DocGpt.Vsix.csproj
+++ b/DocGpt.Vsix/DocGpt.Vsix.csproj
@@ -13,8 +13,8 @@
     <ProjectGuid>{1F6C5045-2935-4E0F-9A07-2E497BC48AA2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VSIXProject1</RootNamespace>
-    <AssemblyName>VSIXProject1</AssemblyName>
+    <RootNamespace>DocGpt</RootNamespace>
+    <AssemblyName>DocGPT</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
@@ -35,6 +35,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
+    <CopyVsixExtensionLocation>..\out\</CopyVsixExtensionLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -82,10 +84,6 @@
     <ProjectReference Include="..\DocGpt.Options\DocGpt.Options.csproj">
       <Project>{926508fb-d431-4bc3-bb2c-f135e7d77426}</Project>
       <Name>DocGpt.Options</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DocGpt\DocGpt.csproj">
-      <Project>{8f4e035a-975c-432f-b1be-cd2fc0e22131}</Project>
-      <Name>DocGpt</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
