embedding demo gif

--- a/DocGpt.Vsix/DocGpt.Vsix.csproj
+++ b/DocGpt.Vsix/DocGpt.Vsix.csproj
@@ -52,6 +52,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\docs\img\demo.gif">
+      <Link>demo.gif</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="..\LICENSE">
       <Link>LICENSE</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
