--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,6 +35,16 @@ jobs:
       - name: Run unit tests
         run: dotnet test .\DocGpt.Test\DocGpt.Test.csproj --configuration Release
       
+      - name: Bump version
+        run: |
+          # Set version number as '1.0.<gh workflow run number>'
+          $NEW_VERSION = "1.0.$env:GITHUB_RUN_NUMBER"
+
+          # Use PowerShell to update the version in the VSIX manifest
+          $xml = xml
+          $xml.SelectSingleNode('//Version').InnerText = $NEW_VERSION
+          $xml.OuterXml | Set-Content -Path .\DocGpt.Vsix\source.extension.vsixmanifest
+
       - name: Build Extension
         run: msbuild .\DocGpt.sln -p:Configuration=Release
 
@@ -47,9 +57,9 @@ jobs:
           name: DocGpt.vsix
           path: DocGpt.Vsix\bin\Release\DocGPT.vsix
 
-      - name: Publish to marketplace
-        uses: cezarypiatek/VsixPublisherAction@1.1
-        with:
-          extension-file: .\DocGpt.Vsix\bin\Release\DocGPT.vsix
-          personal-access-code: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-          publish-manifest-file: .\DocGpt.Vsix\publishmanifest.json
+      # - name: Publish to marketplace
+      #   uses: cezarypiatek/VsixPublisherAction@1.1
+      #   with:
+      #     extension-file: .\DocGpt.Vsix\bin\Release\DocGPT.vsix
+      #     personal-access-code: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+      #     publish-manifest-file: .\DocGpt.Vsix\publishmanifest.json
