--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           show-progress: false
-  
+
       - name: Bump version
         run: |
           # Set version number as '1.0.<gh workflow run number>'
@@ -55,7 +55,7 @@ jobs:
 
       - name: Restore NuGet packages
         run: nuget restore .\DocGpt.sln
-  
+
       - name: Build Extension
         run: msbuild .\DocGpt.sln -p:Configuration=Release
 
@@ -69,7 +69,7 @@ jobs:
           path: DocGpt.Vsix\bin\Release\DocGPT.vsix
 
   publish-to-marketplace:
-    needs: package-extension
+    needs: [run-tests, package-extension]
     runs-on: ubuntu-latest
 
     steps:
