adding permissions to the token for release creation

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -88,6 +88,7 @@ jobs:
   publish-release:
     needs: [run-tests, package-extension]
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
       - name: Create Release
