--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: DocGpt.vsix
+          name: DocGPT.vsix
           path: DocGpt.Vsix\bin\Release\DocGPT.vsix
 
   publish-to-marketplace:
@@ -78,6 +78,7 @@ jobs:
         with:
           name: DocGPT.vsix
           path: ./DocGPT.vsix
+
       - name: Publish to marketplace
         uses: cezarypiatek/VsixPublisherAction@1.1
         with:
@@ -91,11 +92,25 @@ jobs:
     permissions: write-all
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: DocGPT.vsix
+          path: ./DocGPT.vsix
+
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         run: |
-          gh release create "${{ github.sha }}" \
-            --repo="${{ github.repository }}" \
-            --title="v${{ env.EXTENSION_VERSION }}" \
+          gh release create --target "${{ github.sha }}" \
+            --title "v${{ env.EXTENSION_VERSION }}" \
             --generate-notes
+            --draft
+      
+      - name: Upload Release Asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        run: |
+          gh release upload "v${{ env.EXTENSION_VERSION }}" \
+            --file ./DocGPT.vsix#Installer \
+            --clobber 
