Splitting into separate workflows, reusing build & test portions
# Conflicts:
#	.github/workflows/build-and-test.yml

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,14 +1,11 @@
 name: Build and Test
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
   workflow_dispatch:
-
+  workflow_call:
 jobs:
   build-and-test:
     runs-on: windows-latest
