--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: DocGPT.vsix
+          name: DocGPT-signed.vsix
           path: ./DocGPT.vsix
 
       - name: Publish to marketplace
