need to inherit secrets, also fixing the filename for the linux sign tool

--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build-and-test:
     uses: ./.github/workflows/build-and-test.yml
+    secrets: inherit
 
   publish-to-marketplace:
     needs: build-and-test
