--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -15,7 +15,7 @@ jobs:
     needs: build-and-test
     runs-on: windows-latest
     env:
-        EXTENSION_VERSION: ${{ needs.build-and-test.outputs.extVersion }}
+      EXTENSION_VERSION: ${{ needs.build-and-test.outputs.extVersion }}
 
     steps:
       - name: Checkout code
@@ -43,10 +43,22 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     env:
-        EXTENSION_VERSION: ${{ needs.build-and-test.outputs.extVersion }}
-        GH_TOKEN: ${{ github.token }}
+      EXTENSION_VERSION: ${{ needs.build-and-test.outputs.extVersion }}
+      GH_TOKEN: ${{ github.token }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          show-progress: false
+          sparse-checkout: |
+            README.md
+
+      - name: Create tag
+        run: |
+          git -c user.name="GitHub Actions" -c user.email="actions@github.com" tag "v${{ env.EXTENSION_VERSION }}" "${{ github.sha }}"
+          git push --tags origin
+
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
