removing tags from extension, i guess

--- a/DocGpt.Vsix/publishmanifest.json
+++ b/DocGpt.Vsix/publishmanifest.json
@@ -4,15 +4,13 @@
   "identity": {
     "internalName": "net-bc3tech-docgpt",
     "tags": [
-      "dotnet",
       "gpt",
       "llm",
       "ai",
       "xmldoc",
       "xml",
       "documentation",
-      "openai",
-      "azure"
+      "openai"
     ]
   },
   "overview": "../README.md",
